[HP-596] Make bg stay fixed on mobile chrome

--- a/site/assets/css/_sass/main.scss
+++ b/site/assets/css/_sass/main.scss
@@ -25,11 +25,12 @@ body {
     content: "";
     @include purple-gradient-3;
     width: 100%;
-    height: 100%;
+    height: calc(100% + 5rem);
     position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
+    -webkit-transform: translate3d(0, 0, 0);
   }
 }
 
